kubernetes/yamlfiles/network_policies/backend.yaml
apiVersion: v1
kind: Pod
metadata:
 name: backend
 labels:
  app: backend
spec:
 containers:
  - name: backend
    image: nginx
