kubernetes/yamlfiles/network_policies/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
 name: frontend
 labels:
  app: frontend
spec:
 containers:
 - name: frontend
   image: nginx
