kubernetes/yamlfiles/network_policies/deny-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: denny-backend
spec:
 podSelector:
  matchLabels:
   app: backend
 policyTypes:
  - Ingress
